[project]
name = "simple-orbit-animation"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/simple_orbit_animation"]
